Completed Swagger
