# server/dal/cart-items-dal.js
@@ -2,7 +2,7 @@ let connection = require("./connection-wrapper");
 
 async function getCartItemsByCartId(cartId) {
     let sql = `SELECT ci.id, ci.product_id as productId, ci.quantity,
-    p.name as productName, p.price as productPrice, p.img_url as productImage, ci.cart_id as cartId
+    p.name as productName, ROUND(p.price,2) as productPrice, p.img_url as productImage, ci.cart_id as cartId
     FROM supermarket.cart_items ci join products p
     on ci.product_id = p.id 
     where ci.cart_id = ?;`;
